# Movilizer

./: .gitignore  COMPONENTS_DELIVERY.md  DELIVERY_INDEX.md  FULL_REPOSITORY_CONTENTS.md  GPU_QUICK_REFERENCE.txt  GPU_SYSTEM_DELIVERY.md  GPU_SYSTEM_INDEX.md  MODELS_API_REFERENCE.md  MODELS_IMPLEMENTATION_STATUS.md  MODELS_INTEGRATION_SUMMARY.md  QUICK_START.md  README.md  environment.yml  pyproject.toml  requirements.txt  workspace.yaml
configs/: workspace_example.yaml
configs/ai_cmd/: default.yaml
configs/critics/: default.yaml
configs/daemon/: default.yaml
configs/eval/: default.yaml
configs/evolve/: default.yaml
configs/gpu/: default.yaml
configs/model_registry/: default.yaml
configs/run/: default_run.yaml  local_debug.yaml
configs/server/: default.yaml
configs/train/: sdxl_lora.yaml
data/my_identity/: README.txt
docs/: ARCHITECTURE.md  CRITICS_SYSTEM.md  GPU_SYSTEM.md
docs/AI/: COMMANDS.md  PLAYBOOK.md  dialog.schema.json  patch.schema.json  project.schema.json  scene.schema.json  workspace.schema.json
docs/AI/EXAMPLES/: dialog.min.yaml  patch.min.yaml  project.min.yaml  scene.min.yaml  workspace.min.yaml
docs/HUMAN/: AUDIO.md  JUDGES.md  PIPELINE.md  PROJECTS.md  SAFETY.md  SCENES.md  SERVER.md  SLURM.md  TROUBLESHOOTING.md  TWEAKS.md  VIDEO.md
examples/: gpu_management_example.py
projects/feature_film_demo/: project.yaml
projects/my_makeover/: project.yaml
shared/: asset_packs.yaml  prompt_library.yaml
shared/global_refs/: global_color_bible.txt  global_motion_bible.txt
slurm/: eval.sbatch  evolve.sbatch  run_studio_2gpu.sbatch  train_identity_2gpu.sbatch
src/movilizer_studio.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/studio/: __init__.py  ai.py  cli.py  config.py  eval.py  evolve.py  model_registry.py  run.py  server.py  train_identity.py  tweak.py  utils.py
src/studio/ai_cmd/: __init__.py  llm_backend.py  planner.py  rules_backend.py  schemas.py
src/studio/critics/: __init__.py  audience_critic.py  base.py  continuity_critic.py  director_critic.py  ensemble.py  integration_example.py  llm_pool.py  producer.py  story_critic.py  technical_critic.py  visual_critic.py
src/studio/daemon/: __init__.py  __main__.py  daemon.py  queue.py  scheduler.py  state.py
src/studio/discovery/: README.md  __init__.py  benchmark.py  example_usage.py  integrator.py  scanner.py  scheduler.py
src/studio/gpu/: __init__.py  allocator.py  discovery.py  monitor.py
src/studio/judges/: __init__.py  audio.py  base.py  image.py  runner.py  video.py
src/studio/media/: __init__.py  audio.py  music.py  tts.py  video.py
tests/: test_ai_rules.py  test_gpu_system.py  test_model_registry.py  test_patch_ops.py  test_smoke.py
website/: .gitignore  README.md  next.config.js  package.json  tailwind.config.js  tsconfig.json
website/app/: globals.css  layout.tsx  page.tsx
website/components/: MovieCard.tsx  MovieGrid.tsx  Navbar.tsx  VideoPlayer.tsx
(+87 files in other folders)
